--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "build": ""
+    "build": "node_modules/.bin/gulp build"
   },
   "keywords": [],
   "author": "Jon Dotsoy <hi@jon.soy> (http://jon.soy/)",
@@ -11,8 +11,9 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "3.9.1",
-    "babel": "6.5.2",
-    "babel-preset-es2015": "6.9.0"
+    "babel-register": "6.9.0",
+    "babel-preset-es2015": "6.9.0",
+    "gulp-babel": "6.1.2"
   },
   "description": "",
   "babel": {
