--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "td-polyfill",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/gulp build"
@@ -10,13 +10,17 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "3.9.1",
-    "babel-register": "6.9.0",
     "babel-preset-es2015": "6.9.0",
-    "gulp-babel": "6.1.2"
+    "babel-register": "6.9.0",
+    "gulp": "3.9.1",
+    "gulp-babel": "6.1.2",
+    "gulp-env": "^0.4.0",
+    "gulp-preprocess": "^2.0.0"
   },
   "description": "",
   "babel": {
-    "presets": [ "es2015" ]
+    "presets": [
+      "es2015"
+    ]
   }
 }
