--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.2",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/gulp build"
+    "build": "node_modules/.bin/gulp build",
+    "prepublish": "npm run-script build"
   },
   "keywords": [],
   "author": "Jon Dotsoy <hi@jon.soy> (http://jon.soy/)",
